add banner api, add status to brand
